finish modification